@@ -27,7 +27,6 @@ package de.minigameslib.mclib.spigottest.nms;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.Arrays;
@@ -240,7 +239,7 @@ public class SpigotClassLoader extends ClassLoader implements FilterableClassLoa
         {
             try
             {
-                final URL url = filter.toURI().resolve(path).toURL();
+                final URL url = new URL(filter, path);
                 if (DEBUG) System.out.println("Check " + name + " against " + url); //$NON-NLS-1$ //$NON-NLS-2$
                 try (final InputStream is = url.openStream())
                 {
@@ -248,7 +247,7 @@ public class SpigotClassLoader extends ClassLoader implements FilterableClassLoa
                     throw new ClassNotFoundException();
                 }
             }
-            catch (@SuppressWarnings("unused") URISyntaxException | IOException ex)
+            catch (@SuppressWarnings("unused") IOException ex)
             {
                 // silently ignore
             }
